# EmbeddedProto

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  bitbucket-pipelines-dependencies.sh  bitbucket-pipelines.yml  build_test.sh  code_coverage.sh  install.py  protoc-gen-eams  protoc-gen-eams.bat  protoc-gen-eams.py  pyproject.toml  release_to_github.sh  requirements.txt  run_sonar.sh  setup.bat  setup.py  setup.sh  sonar-project.properties  test_data.py
.github/workflows/: ci.yml  distribute_pypi.yml
EmbeddedProto/: embedded_proto_options.proto  main.py
EmbeddedProto/templates/: FieldEnum_Serialize.h.jinja2  Header.h.jinja2  TypeOneof.h.jinja2
doc/: Doxyfile  Mainpage.h
examples/NUCLEO-F446RE/: .cproject  .project  EmbeddedProtoDemo.ioc  STM32F446RETX_FLASH.ld  generate_source_code.bat
examples/NUCLEO-F446RE/.externalToolBuilders/: EmbeddedProto_generator_script.launch
examples/NUCLEO-F446RE/Core/Inc/: DemoReadBuffer.h  DemoWriteBuffer.h  stm32f4xx_hal_conf.h
examples/NUCLEO-F446RE/Core/Src/: main.c  main.cpp
examples/proto/: reply.proto  request.proto
generator/: Header_Template.h  TypeDefinitions.py  __main__.py  embedded_proto_options.proto  old__protoc-gen-eams.py  protoc-gen-eams.py  protoc-gen_eams.py  pyproject.toml  setup.py
generator/EmbeddedProto/: Field.py  Oneof.py  ProtoFile.py  TypeDefinitions.py  __main__.py  main.py
generator/EmbeddedProto/templates/: FieldBasic_Deserialize.h.jinja2  FieldBasic_GetSet.h.jinja2  FieldBasic_Serialize.h  FieldBytes_GetSet.h.jinja2  FieldEnum_Serialize.h  FieldErrorRecursive_GetSet.h  FieldMsg_Deserialize.h  FieldMsg_Serialize.h  FieldRepeated_GetSet.h.jinja2  FieldRepeated_Serialize.h  FieldRepeated_Serialize.h.jinja2  FieldStringBytes_Serialize.h  FieldString_GetSet.h  Header.h  TypeDefEnum.h  TypeDefMsg.h  TypeDefMsg.h.jinja2  TypeOneof.h
generator/eams/: Field.py  Oneof.py  ProtoFile.py  TypeDefinitions.py
generator/support/: Field.py  Oneof.py  ProtoFile.py  TypeDefinitions.py
generator/templates/: FieldBasic.h  FieldBasic_Deserialize.h  FieldBasic_GetSet.h  FieldBasic_Serialize.h  FieldBytes.h  FieldBytes_GetSet.h  FieldEnum.h  FieldEnum_Deserialize.h  FieldEnum_GetSet.h  FieldEnum_GetSet.h.jinja2  FieldEnum_Serialize.h  FieldErrorRecursive_GetSet.h  FieldErrorRecursive_GetSet.h.jinja2  FieldMsg.h  FieldMsg_Deserialize.h  FieldMsg_GetSet.h  FieldMsg_GetSet.h.jinja2  FieldMsg_Serialize.h  FieldRepeated.h  FieldRepeated_GetSet.h  FieldRepeated_Serialize.h  FieldString.h  FieldString_GetSet.h  Header.h  TypeDefEnum.h  TypeDefMsg.h  TypeOneof.h
src/: Defines.h  DynamicArray.h  Errors.h  Field.h  FieldBool.h  FieldBytes.h  FieldEnum.h  FieldFixed.h  FieldString.h  FieldStringBytes.h  FieldVarInt.h  Fields.cpp  Fields.h  MessageBufferInterface.h  MessageInterface.cpp  MessageInterface.h  MessageNanopbTemplate.h  MessageSizeCalculator.h  ReadBufferFixedSize.h  ReadBufferInterface.h  ReadBufferSection.cpp  ReadBufferSection.h  RepeatedField.h  RepeatedFieldFixedSize.h  RepeatedFieldSize.h  WireFormatter.h  WriteBufferFixedSize.h  WriteBufferInterface.h
test/: test_DynamicArray.cpp  test_EmbeddedProto.cpp  test_FieldBool.cpp  test_FieldEnum.cpp  test_FieldFixed.cpp  test_FieldVarInt.cpp  test_Fields.cpp  test_IncludeOtherFiles.cpp  test_MessageSizeCalculator.cpp  test_NestedMessage.cpp  test_ReadBufferFixedSize.cpp  test_ReadBufferSection.cpp  test_RepeatedField.cpp  test_RepeatedFieldFixedSize.cpp  test_RepeatedFieldMessage.cpp  test_RepeatedFields.cpp  test_SimpleTypes.cpp  test_WireFormatter.cpp  test_WriteBufferFixedSize.cpp  test_empty_messages.cpp  test_field_options.cpp  test_getters_setters_fields.cpp  test_max_field_size.cpp  test_oneof_fields.cpp  test_optional_fields.cpp  test_string_bytes.cpp  test_unkown_fields.cpp
test/mock/: MessageBufferMock.h  ReadBufferMock.h  WriteBufferMock.h
test/proto/: empty_file_to_include.proto  empty_message.proto  field_options.proto  file_to_include.proto  include_other_files.proto  nested_message.proto  oneof_fields.proto  optional_fields.proto  repeated_fields.proto  simple_types.proto  state.proto  string_bytes.proto
test/proto/subfolder/: file_to_include_from_subfolder.proto
