[project]
name = "EmbeddedProto"
authors = [
    {name = "Embedded AMS B.V.", email = "info@embeddedproto.com"},
]
description = "EmbeddedProto generator"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-3.0-only"}
classifiers = [ ]
dependencies = [
    "Jinja2>=3,<4",
    "MarkupSafe>=2.0,<3",
    "protobuf>=4.25.1,<5",
    "six>=1.16.0,<2",
    "toposort>=1.7,<2",
]
version = "4.0.0"

[tool.setuptools.packages.find]
where = ["."]
include = ["EmbeddedProto*"]

[project.scripts]
protoc-gen-eams = "EmbeddedProto.main:main_plugin"

[tool.setuptools.package-data]
EmbeddedProto = ["templates/*"]

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

